@@ -36,6 +36,35 @@
             <version>3.0.14.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId> <!--добавочка для модели-->
+            <version>5.6.3.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId> <!--добавочка для модели-->
+            <version>8.0.25</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>  <!--добавочка для @EnableTransactionManagement-->
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId> <!--добавочка для DriverManagerDataSource-->
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId> <!--добавочка для LocalSessionFactoryBean-->
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -46,9 +75,9 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>2.4</version>
                     <configuration>
-                        <warSourceDirectory>src/webapp</warSourceDirectory>
+                        <warSourceDirectory>src/webapp</warSourceDirectory> <!--тут итак порядок-->
                         <warName>spring_mvc</warName>
-                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                        <failOnMissingWebXml>false</failOnMissingWebXml> <!--тут итак порядок-->
                     </configuration>
                 </plugin>
             </plugins>
@@ -58,8 +87,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
+                    <source>17</source> <!--тут итак порядок-->
                     <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
